Use id_token for user authentication
Fixes gh-4410